homework_markup_4 width fixes on mobile version

--- a/homeworks/artem.bilenko_brilux/homework_markup_4/style.css
+++ b/homeworks/artem.bilenko_brilux/homework_markup_4/style.css
@@ -382,6 +382,10 @@ body {
 
 @media screen and (max-width: 992px) {
 
+  body {
+    width: initial;
+  }
+
   .dream-section {
     width: 100%;
     margin: 0 auto;
